[tool.poetry]
name = "camera"
version = "0.1.0"
description = ""
authors = ["yossyhal <yossyhal.k@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pyproject-flake8 = "^0.0.1-alpha.2"

[tool.flake8]
ignore = ["W503", "W504", "E203"]
max-line-length = 99
exclude = [
    ".git",
    "__pycache__",
    "old",
    "build",
    "dist",
    ".venv",
    "venv",
]

[tool.black]
line-length = 99
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
